doppelganger fix for deep hierarchies