@@ -60,7 +60,7 @@ public abstract class PolymorphicXmlAdapter<T> extends XmlAdapter<JsonNode, T> {
    */
   public PolymorphicXmlAdapter () {
 
-    baseClass = GenericUtility.getTypeArgumentsOfSubclass(PolymorphicXmlAdapter.class, this.getClass()).get(0);
+    baseClass = GenericUtility.getTypeArgumentsOfSubclass(PolymorphicXmlAdapter.class, this.getClass()).getFirst();
   }
 
   /**
@@ -121,7 +121,7 @@ public abstract class PolymorphicXmlAdapter<T> extends XmlAdapter<JsonNode, T> {
     XmlRootElement xmlRootElementAnnotation;
 
     if ((xmlRootElementAnnotation = value.getClass().getAnnotation(XmlRootElement.class)) == null) {
-      throw new JAXBProcessingException("The class(%s) is missing a %s annotation", value.getClass().getName(), XmlRootElement.class.getSimpleName());
+      throw new JAXBProcessingException("The class(%s) is missing an %s annotation", value.getClass().getName(), XmlRootElement.class.getSimpleName());
     } else {
 
       ObjectNode rootNode = JsonNodeFactory.instance.objectNode();
